# Python-ElectricKiwiApi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
api/: electrickiwi_api.py
src/api/: __init__.py  electrickiwi_api.py
src/electrickiwi_api/: __init__.py  api.py  auth.py  exceptions.py  model.py
test/: test_instance.py
tests/: test_instance.py
