[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name        = "electrickiwi-api"
version     = "0.8.1"
license     = {text = "GNU-3.0"}
description = ""
readme      = "README.md"
authors     = [
    {name = "Michael Arthur", email = "michael@jumblesoft.co.nz"}
]


requires-python = ">=3.9.0"
dependencies    = [
    "aiohttp>=3.8.1"
    ]

[tool.bumpver]
current_version = "0.8.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version     = "{version}"']
"src/electrickiwi_api/__init__.py" = ["{version}"]
"setup.cfg" = ["version = {version}"]
"README.md" = ['\[SemVer {version}\]', 'img.shields.io/static/v1.svg?label=SemVer&message={version}&color=blue']

